positioned top navbar as fixed so you see it when scrolling, adjusted side-nav boxes, changed text alignment in footer

--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -12,6 +12,9 @@
 }
 
 nav {
+  position: fixed !important;
+  z-index: 1;
+  width: 100%;
   overflow: auto;
   display: flex;
   justify-content: space-between;
@@ -63,7 +66,7 @@ nav {
 }
 
 .main-content {
-  padding: 0 60px;
+  padding: 50px 60px;
   flex: 1;
 }
 
@@ -88,7 +91,7 @@ nav {
 }
 
 .card {
-  margin-bottom: 25px;
+  margin-bottom: 20px;
 }
 .card-header {
   color: white;
@@ -102,6 +105,11 @@ nav {
 .grey {
   background: #EEEEEE;
 }
+
+.card-block {
+  display: flex;
+}
+
 .box {
   overflow: auto;
   display: flex;
@@ -109,15 +117,16 @@ nav {
   align-items: center;
   flex-direction: column;
   border: 1px solid lightgrey;
-  min-width: 122px;
-  min-height: 60px;
+  max-width: 122px;
+  max-height: 150px;
   height: auto;
   width: auto;
+  margin: 0;
   .check {
     padding-left: 70px;
   }
   .icon {
-    margin-top: -15px;
+    margin-top: -20px;
     padding-bottom: 5px;
   }
   p {
@@ -138,20 +147,49 @@ nav {
   }
 }
 
+.hide {
+  display: none;
+}
+
+.show {
+  width: 805px;
+  height: 740px;
+}
+
 .footer {
   width: 100%;
 }
 
 .footer-box1 {
-  width: 100%;
-  float: left;
-  background: #292B2C;
-  .left img {
-    zoom: 0.51;
+  overflow: auto;
+  display: flex;
+  align-items: flex-start;
+  margin-bottom: 20px;
+  border-bottom: 1px solid lightgrey;
+  .footer-left {
+    padding: 0 30px;
+    background: #292B2C;
+    img {
+      zoom: 0.51;
+    }
+    .social {
+      padding: 0 30px;
+    }
+  }
+  .footer-center {
+    display: flex;
+    align-items: flex-start;
+  }
+  h6 {
+    color: white;
+    font-weight: bold;
   }
 }
 
 .footer-box2 {
+  padding: 0 60px;
   width: 100%;
   color: white;
+  text-align: center;
+  font-size: 11px;
 }
